# F1Game

./: .flake8  .gitignore  IMPROVEMENTS_SUMMARY.md  Makefile  README.md  VIRTUAL_ENVIRONMENT_BEST_PRACTICES.md  activate.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup_env.sh
.git.backup/: COMMIT_EDITMSG  config  index  packed-refs
F1RacerGame/: CLAUDE.md  PROGRAMMER_GUIDE.md  asset_loader.py  config.py  constants.py  difficulty.py  index.py  logger.py  obstacles.py  powerups.py
tests/: test_game_logic.py  test_simple.py
